@@ -175,7 +175,7 @@ Info=Suivi
 Family=Famille
 Description=Description
 Designation=Désignation
-Action=Evénement
+Action=Action
 Model=Modèle
 DefaultModel=Modèle par défaut
 About=À propos
